# kte

./: .gitignore  .goreleaser.yaml  AppendBuffer.h  Buffer.cc  Buffer.cpp  Buffer.h  CMakeLists.txt  Command.cc  Command.cpp  Command.h  CppHighlighter.cc  CppHighlighter.h  Editor.cc  Editor.cpp  Editor.h  Font.h  Frontend.h  GUIConfig.cc  GUIConfig.h  GUIFrontend.cc  GUIFrontend.cpp  GUIFrontend.h  GUIInputHandler.cc  GUIInputHandler.cpp  GUIInputHandler.h  GUIRenderer.cc  GUIRenderer.cpp  GUIRenderer.h  GUITheme.h  GapBuffer.cc  GapBuffer.h  GoHighlighter.cc  GoHighlighter.h  HelpText.cc  HelpText.h  Highlight.h  HighlighterEngine.cc  HighlighterEngine.h  HighlighterRegistry.cc  HighlighterRegistry.h  (+84 more)
.github/workflows/: release.yml
.junie/: guidelines.md
bench/: BufferBench.cc  PerformanceSuite.cc
cmake/: Info.plist.in  imgui.cmake  packaging.cmake
docs/: TestFrontend.md  ke.md  kge.1  kte.1  lsp plan.md  syntax on.md  syntax.md  themes.md  undo-roadmap.md  undo-state.md  undo.md
docs/plans/: piece-table-migration.md  qt-frontend.md  swap-files.md  undo.md
docs/reports/20251203/: code-report-quality.md  code-report.md
ext/: json.h  json_fwd.h
ext/fonts/: B612Mono.h  BrassMonoCode.h  FiraCode.h  Go.h  IBMPlexMono.h  Idealist.h  Inconsolata.h  InconsolataExpanded.h  README.txt  ShareTech.h  SpaceMono.h  Syne.h  Triplicate.h  Unispace.h  b612_mono.h  brassmono.h  gen_font_includes.py
fonts/: B612Mono.h  BrassMono.h  BrassMonoCode.h  FiraCode.h  Font.cc  Font.h  FontList.h  FontRegistry.cc  FontRegistry.h  Go.h  IBMPlexMono.h  Inconsolata.h  InconsolataExpanded.h  ShareTech.h  Syne.h  b612_mono.h  brassmono.h  gen_font_includes.py
lsp/: BufferChangeTracker.cc  BufferChangeTracker.h  Diagnostic.h  DiagnosticDisplay.h  DiagnosticStore.cc  DiagnosticStore.h  JsonRpcTransport.cc  JsonRpcTransport.h  LspClient.h  LspManager.cc  LspManager.h  LspProcessClient.cc  LspProcessClient.h  LspServerConfig.h  LspTypes.h  TerminalDiagnosticDisplay.cc  TerminalDiagnosticDisplay.h  UtfCodec.cc  UtfCodec.h
syntax/: CppHighlighter.cc  CppHighlighter.h  ErlangHighlighter.cc  ErlangHighlighter.h  ForthHighlighter.cc  ForthHighlighter.h  GoHighlighter.cc  HighlighterEngine.cc  HighlighterEngine.h  HighlighterRegistry.cc  HighlighterRegistry.h  JsonHighlighter.cc  JsonHighlighter.h  LanguageHighlighter.h  LispHighlighter.cc  LispHighlighter.h  MarkdownHighlighter.cc  NullHighlighter.cc  NullHighlighter.h  PythonHighlighter.cc  PythonHighlighter.h  RustHighlighter.cc  RustHighlighter.h  ShellHighlighter.cc  ShellHighlighter.h  SqlHighlighter.cc  SqlHighlighter.h  TreeSitterHighlighter.cc  TreeSitterHighlighter.h
themes/: Amber.h  EInk.h  Everforest.h  Gruvbox.h  KanagawaPaper.h  LCARS.h  Nord.h  OldBook.h  Orbital.h  Plan9.h  Solarized.h  ThemeHelpers.h  WeylandYutani.h  Zenburn.h
